# shmpipeline

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pypi.yml
benchmarks/: __init__.py  benchmark_pipeline.py  smoke.yaml
benchmarks/results/: README.md  linux-cpu-2026-07-11.json  rtx5090-linux-2026-07-11-pyshmem-1.1.1.json  rtx5090-linux-2026-07-11.json
docs/: conf.py  index.md  requirements.txt
docs/examples/: affine-transformation.md  basic-ao-system.md  custom-operations.md  gpu-affine-transformation.md  gpu-basic-ao-system.md  gpu-custom-operations.md  index.md  observatory-ao-system.md  source-sink-plugins.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: cli.md  control-plane.md  extensions.md  gui.md  performance.md  runtime.md  troubleshooting.md
docs/reference/: core.rst  gui.rst  index.md  kernels.rst
examples/affine_transformation/: README.md  pipeline.yaml  run_example.py
examples/basic_ao_system/: README.md  benchmark_120x120.yaml  pipeline.yaml  run_benchmark.py  run_example.py
examples/custom_operations/: README.md  pipeline.yaml  run_example.py
examples/gpu_affine_transformation/: README.md  pipeline.yaml  run_example.py
examples/gpu_basic_ao_system/: README.md  pipeline.yaml  run_example.py
examples/gpu_custom_operations/: README.md  pipeline.yaml  run_example.py
examples/observatory_ao_system/: README.md  benchmark_affine_reconstructor.py  pipeline.yaml  run_example.py
examples/source_sink_plugins/: README.md  pipeline.yaml  pyproject.toml  run_example.py
examples/source_sink_plugins/src/shmpipeline_example_endpoints/: __init__.py
examples/tomographic_ao_stress/: IMPLEMENTATION_PLAN.md  README.md  expected_dimensions.json  generate_calibrations.py  pipeline_cpu.yaml  pipeline_gpu.yaml  pipeline_gpu_batched.yaml  pipeline_gpu_sustained.yaml  pipeline_gpu_sustained_batched.yaml  run_benchmark.py
src/shmpipeline/: __init__.py  _endpoint_base.py  cli.py  config.py  (+14 more)
tests/: conftest.py  test_cli.py  test_config.py  test_control.py  test_document.py  test_endpoints.py  test_frame_sync.py  test_graph.py  test_gui_app.py  test_gui_model.py  test_improvements.py  test_kernels.py  test_manager.py  test_observatory_example.py  test_registry.py  test_runtime.py  test_shm_cleanup.py  test_synthetic.py  test_tomographic_controller.py  test_tomographic_example.py
(+63 files in other folders)
