[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shmpipeline-example-endpoints"
version = "0.1.0"
description = "Example source and sink plugins for shmpipeline."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26,<3",
    "shmpipeline",
]

[project.entry-points."shmpipeline.sources"]
"example.simulated_camera" = "shmpipeline_example_endpoints:SimulatedCameraSource"

[project.entry-points."shmpipeline.sinks"]
"example.npy_frame_sink" = "shmpipeline_example_endpoints:NpyFrameSink"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
